test/fail/method_arg_redeclaration.ly
<@lily method m(integer a, integer a):nil {} @>
